welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:20: error: illegal start of simple expression
		else
                ^